# regex2fat

./: .gitignore  Cargo.toml  README.md
src/: fat32.rs  main.rs
