[package]
name = "regex2fat"
description = "Turn your favourite regex into FAT32"
version = "1.0.0"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/8051Enthusiast/regex2fat"
keywords = ["regex", "fat"]
edition = "2018"
license = "Unlicense"


[dependencies]
regex-automata = "0.1"
clap = "2.33"
